# Rust-REVM

./: .dockerignore  .env  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION_REPORT.md  LICENSE  PROJECT_SUMMARY.md  README.md  TECHNICAL_REPORT.md  TECHNICAL_SUMMARY.md  TERMS_OF_SERVICE.md  docker-compose.yml  llm.txt  rustfmt.toml
.github/workflows/: rust-ci.yml
api/: openapi.yaml
bot/: README.md  requirements.txt  sniper_bot.py  telegram_bot.py  trading_bot.py
docs/: index.html
examples/: api_demo.ps1  api_demo.sh  honeypot_demo.rs  telemetry_demo.rs
sdk/python/: README.md  setup.py
sdk/python/ruster_revm/: __init__.py  client.py  models.py
src/: analyzer.rs  cache.rs  config.rs  decoder.rs  dexscreener.rs  honeypot.rs  lib.rs  main.rs  risk_score.rs  rpc.rs  simulator.rs  telemetry.rs  types.rs
src/api/: handlers.rs  middleware.rs  mod.rs  routes.rs  types.rs
src/core/: analyzer.rs  honeypot.rs  ml_risk.rs  mod.rs  simulator.rs
src/models/: config.rs  errors.rs  mod.rs  types.rs
src/providers/: alchemy.rs  dexscreener.rs  mod.rs  rpc.rs  solana.rs  trace.rs  websocket.rs
src/utils/: cache.rs  constants.rs  decoder.rs  mod.rs  telemetry.rs
telemetry/: stats_1768059079.json  stats_1768061063.json  telemetry_history.csv
tests/: alchemy_api_test.rs  integration_test.rs  real_world_test.py  test_sniper_bot.py  test_solana_token.py
tools/: trading_shield.py
